2023-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (StoreAlienBlob): Fix compilation warning in log
	statement.

2023-09-28  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/png/input_PNG.bmp: Add a BMP sample with BI_PNG
	compression.

2023-09-27  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Writer for BI_PNG compression.

2023-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh : Updates for the 1.3.42 release.

	* NEWS.txt: Update the news for the 1.3.42 release.

	* VisualMagick/installer/redist/VC2013/note.txt: Add note about
	where to get Visual Studio 2013 redistributables.  File also
	serves to create the needed directory.

2023-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am (coders_bmp_la_LIBADD): Extra modules are not
	needed because the dependencies are taken care of by loading other
	modules.

2023-09-23  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Emit error when OS/2 bitmap with compression BI_JPEG
	or BI_PNG is detected.

	Read files compressed with BI_PNG.

2023-09-22  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Display bitmasks into optional log.

2023-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/jpeg/read.t: Add test for JPEG-compressed BMP.
	Moved input reference file to PerlMagick/t/jpeg/input_JPEG.bmp and
	reference output file is
	PerlMagick/t/reference/jpeg/input_JPEG.bmp.miff.

2023-09-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_JPEG.bmp: Added BMP sample with JPEG encoding.

	* coders/bmp.c: Only 16bpp and 32bpp is supported for BI_BITFIELDS
	compression type. 8bpp is not implemented.  This fixes oss-fuzz
	issue 62519: "graphicsmagick:coder_BMP_fuzzer:
	Use-of-uninitialized-value in WriteBMPImage".

2023-09-20  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Remove duplicity, same information has been logged
	twice.
	